--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     Hello World! Hello again! Hello Hello Hello! Hello!
-    I am new here, Why are you not so mean?
+    You are a piece of trash
   </body>
 </html>
