--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     Hello World! Hello again! Hello Hello Hello! Hello!
-    You are a piece of trash
+    You are a piece of trash and you know it
   </body>
 </html>
